@@ -348,7 +348,7 @@ static gboolean process_from_pending_client(struct irc_client *client,
 		}
 
 		client->network = network_ref(find_network_by_hostname(my_global, 
-				l->args[1], l->args[2]?atoi(l->args[2]):6667, TRUE));
+				l->args[1], l->args[2]?atoi(l->args[2]):6667, my_global->config->create_implicit));
 
 		if (client->network == NULL) {
 			client_log(LOG_ERROR, client, 
