@@ -250,6 +250,8 @@ static gboolean transport_send_queue(GIOChannel *ioc, GIOCondition cond,
 		case G_IO_STATUS_ERROR:
 			transport->callbacks->log(transport, l, error);
 			break;
+		case G_IO_STATUS_EOF:
+			g_assert_not_reached();
 		}
 		free_line(l);
 	}
@@ -304,6 +306,8 @@ gboolean transport_send_line(struct irc_transport *transport,
 	case G_IO_STATUS_ERROR:
 		transport->callbacks->log(transport, l, error);
 		return FALSE;
+	case G_IO_STATUS_EOF:
+		g_assert_not_reached();
 	}
 
 	return TRUE;
