@@ -75,7 +75,8 @@ gboolean default_socks_connect_fqdn (struct pending_client *cl, const char *host
 	
 	listener_log(LOG_INFO, cl->listener, "Request to connect to %s:%d", hostname, port);
 
-	result = find_network_by_hostname(cl->listener->global, hostname, port, TRUE);
+	result = find_network_by_hostname(cl->listener->global, hostname, port, 
+									  cl->listener->global->config->create_implicit);
 
 	if (result == NULL) {
 		listener_log(LOG_WARNING, cl->listener, "Unable to return network matching %s:%d", hostname, port);
@@ -179,7 +180,7 @@ static gboolean handle_client_line(struct pending_client *pc, const struct irc_l
 
 			if (networkname != NULL) {
 				n = find_network_by_hostname(pc->listener->global, 
-											 networkname, 6667, TRUE);
+											 networkname, 6667, pc->listener->global->config->create_implicit);
 				if (n == NULL) {
 					irc_sendf(pc->connection, pc->listener->iconv, NULL, ":%s %d %s :Password error: unable to find network", 
 							  get_my_hostname(), ERR_PASSWDMISMATCH, "*");
